dualism: add "I think, therefore I am" reference
Now, we are doing philosophy proper.

--- a/dualism/dualism_presentation.tex
+++ b/dualism/dualism_presentation.tex
@@ -23,23 +23,48 @@
 
 \begin{frame}{Disposition}
 	\begin{enumerate}
-		\item René Descartes on Doubt
-		\item Mental Causation
-		\item TODO
+		%\item René Descartes on Doubt
+		%\item Mental Causation
+		\item Substance Dualism
+		\item Arguments in Favour
+			% I can doubt the existance of my body, but not that of my mind. Therefore they are not the same.
+		\item Counter-arguments
+			% the pairing problem
+		\item Final Thoughts
 	\end{enumerate}
 \end{frame}
 
-% === [ Section One ] ==========================================================
+% === [ Substance Dualism ] ====================================================
 
-\section{Section One}
+\section{Substance Dualism}
 
-% --- [ Frame One ] ------------------------------------------------------------
+% --- [ I think, therefore I am ] ----------------------------------------------
 
-\begin{frame}{Frame One}
-	foo \emph{bar} baz \alert{qux} \textbf{fob}
+\begin{frame}{I think, therefore I am}
+	\begin{quote}
+		\textit{``I can doubt the existance of my body, but because I think, I cannot doubt the existance of my mind.''}
+		- René Descartes {\tiny (paraphrased)}
+	\end{quote}
+
+	\pause
+	\vspace{2em}
+
+	\textbf{``cogito'' Argument}: Since we can doubt the existance of one, but not the other, mind and body cannot be identical.
+
+	\pause
+	\vspace{2em}
+
+	\emph{Therefore}, we are made of two fundamentally \textbf{distinct} substances:
+	\begin{itemize}
+		\item \alert{Res extensa}: material thing (extended in space)
+		\item \alert{Res cogitans}: thinking thing
+	\end{itemize}
+
 \end{frame}
 
 % --- [ Frame Two ] ------------------------------------------------------------
+
+% Substances can exist, independently, on their own.
 
 \begin{frame}{Frame Two}
 	foo
