dualism: define substance and add notice of pineal gland

--- a/dualism/dualism_presentation.tex
+++ b/dualism/dualism_presentation.tex
@@ -7,7 +7,7 @@
 
 \usepackage{preamble}
 
-\title{Substance Dualism}
+\title{Cartesian Dualism}
 \subtitle{Mind Distinct from Body}
 \date{\today}
 \author{Robin Eklind}
@@ -26,9 +26,8 @@
 		%\item René Descartes on Doubt
 		%\item Mental Causation
 		\item Substance Dualism
-		\item Arguments in Favour
+		\item Arguments and Counter-arguments
 			% I can doubt the existance of my body, but not that of my mind. Therefore they are not the same.
-		\item Counter-arguments
 			% the pairing problem
 		\item Final Thoughts
 	\end{enumerate}
@@ -62,17 +61,34 @@
 
 \end{frame}
 
-% --- [ Frame Two ] ------------------------------------------------------------
+% --- [ What is a Substance? ] -------------------------------------------------
 
-% Substances can exist, independently, on their own.
+\begin{frame}{What is a Substance?}
+	By definition, a \alert{substance} can exist \emph{independently} without any other substance.
 
-\begin{frame}{Frame Two}
-	foo
+	\begin{itemize}
+		\pause
+		\item Matter can exist without a mind (e.g. a rock).
+		\pause
+		\item A mind can \textit{in principle} exist without a body.
+	\end{itemize}
 \end{frame}
 
-% === [ Section Two ] ==========================================================
+% --- [ Where is the Mind? ] ---------------------------------------------------
 
-\section{Section Two}
+\begin{frame}{Where is the Mind?}
+	Nowadays considered a historical anecdote, René Descartes believed the \alert{pineal gland} to the \textit{principal seat of the soul}, through which the mind interacted with the body.
+
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.55\paperheight]{inc/pineal_gland.png}
+		\caption{The pineal gland of the brain.}
+	\end{figure}
+\end{frame}
+
+% === [ Arguments and Counter-arguments ] ======================================
+
+\section{Arguments and Counter-arguments}
 
 % --- [ Frame Three ] ----------------------------------------------------------
 
