dualism: almost final draft

--- a/dualism/dualism_presentation.tex
+++ b/dualism/dualism_presentation.tex
@@ -23,12 +23,8 @@
 
 \begin{frame}{Disposition}
 	\begin{enumerate}
-		%\item René Descartes on Doubt
-		%\item Mental Causation
 		\item Substance Dualism
 		\item Arguments and Counter-arguments
-			% I can doubt the existance of my body, but not that of my mind. Therefore they are not the same.
-			% the pairing problem
 		\item Final Thoughts
 	\end{enumerate}
 \end{frame}
@@ -39,16 +35,19 @@
 
 % --- [ I think, therefore I am ] ----------------------------------------------
 
+% called all his previous beliefs into doubt,
+% to find out of what he could be certain
+
 \begin{frame}{I think, therefore I am}
 	\begin{quote}
-		\textit{``I can doubt the existance of my body, but because I think, I cannot doubt the existance of my mind.''}
+		\textit{``I can doubt the existence of my body, but because I think, I cannot doubt the existence of my mind.''}
 		- René Descartes {\tiny (paraphrased)}
 	\end{quote}
 
 	\pause
 	\vspace{2em}
 
-	\textbf{``cogito'' Argument}: Since we can doubt the existance of one, but not the other, mind and body cannot be identical.
+	\textbf{``cogito'' Argument}: Since we can doubt the existence of one, but not the other, mind and body cannot be identical.
 
 	\pause
 	\vspace{2em}
@@ -90,22 +89,65 @@
 
 \section{Arguments and Counter-arguments}
 
-% --- [ Frame Three ] ----------------------------------------------------------
+% --- [ The Masked Person Phallacy ] -------------------------------------------
 
-\begin{frame}{Frame Three}
-	foo
+\begin{frame}{The Masked Person Phallacy}
+	% reminder.
+	\textbf{``cogito'' Argument}: Since we can doubt the existence of one (body), but not the other (mind), mind and body cannot be identical.
+
+	\pause
+	\vspace{2em}
+
+	\textbf{``cogito'' Counter-argument}: \textit{The Masked Person Phallacy}
+	\begin{itemize}
+		\pause
+		\item Doubting the existence one thing (matter) and not the other (mind) is subjective knowledge, not objective fact. Therefore they \textit{can} still be identical.
+		\pause
+		\item What you know about something (epistemology) is \textit{not} a property of the thing itself.
+	\end{itemize}
 \end{frame}
 
-% --- [ Frame Four ] -----------------------------------------------------------
+% --- [ The Pairing Problem ] --------------------------------------------------
 
-\begin{frame}{Frame Four}
-	foo
+\begin{frame}{The Pairing Problem}
+	Imagine two bodies, $A$ and $B$, and a mind, $M$. How is $M$ paired with a specific body, say $A$? This is the \alert{pairing problem}.
+
+	\pause
+	\vspace{2em}
+
+	The issue lies in the fact that \textit{res cogitans} is non-physical and has no spatial properties. How can it then be paired with a specific body?
 \end{frame}
 
-% --- [ Frame Five ] -----------------------------------------------------------
+% --- [ Problem of Causal Interaction ] ----------------------------------------
 
-\begin{frame}{Frame Five}
-	foo
+\begin{frame}{Problem of Causal Interaction}
+	If the mind is purly non-physical, how can it affect the physical world? This is the \alert{problem of causal interaction}.
+
+	How can something without physical properties have physical effect?
+\end{frame}
+
+% === [ Final Thoughts ] =======================================================
+
+\section{Final Thoughts}
+
+% --- [ Definition of Mind? ] --------------------------------------------------
+
+\begin{frame}{Definition of Mind?}
+	It seems there is no consitent and generally agreed upon definition of the \alert{mind}.
+
+	\pause
+	\vspace{2em}
+
+	\begin{itemize}
+		\item Some definitions of the mind include every aspect of cognitive capability.
+		\pause
+		\item Others only include the percept or \alert{qualia} of our conscious experience.
+	\end{itemize}
+
+	\pause
+	\vspace{2em}
+
+	Without a unified definition, evaluating different philosophical frameworks and ideas becomes rather futile.
 \end{frame}
 
 % === [ Questions ] ============================================================
