dualism: add feedback comment

--- a/dualism/dualism_presentation.tex
+++ b/dualism/dualism_presentation.tex
@@ -2,6 +2,8 @@
 
 \usetheme[titleformat=allsmallcaps]{metropolis}
 
+% Feedback: would be even better if you point out weak points.
+
 % KAIST mtheme style.
 \usepackage{kaist}
 
@@ -76,6 +78,8 @@
 % --- [ Where is the Mind? ] ---------------------------------------------------
 
 \begin{frame}{Where is the Mind?}
+	\pause
+
 	Nowadays considered a historical anecdote, René Descartes believed the \alert{pineal gland} to the \textit{principal seat of the soul}, through which the mind interacted with the body.
 
 	\begin{figure}
@@ -89,21 +93,21 @@
 
 \section{Arguments and Counter-arguments}
 
-% --- [ The Masked Person Phallacy ] -------------------------------------------
+% --- [ The Masked-person Fallacy ] --------------------------------------------
 
-\begin{frame}{The Masked Person Phallacy}
+\begin{frame}{The Masked-person Fallacy}
 	% reminder.
 	\textbf{``cogito'' Argument}: Since we can doubt the existence of one (body), but not the other (mind), mind and body cannot be identical.
 
 	\pause
 	\vspace{2em}
 
-	\textbf{``cogito'' Counter-argument}: \textit{The Masked Person Phallacy}
+	\textbf{``cogito'' Counter-argument}: \textit{The Masked-person Fallacy}
 	\begin{itemize}
 		\pause
 		\item Doubting the existence one thing (matter) and not the other (mind) is subjective knowledge, not objective fact. Therefore they \textit{can} still be identical.
 		\pause
-		\item What you know about something (epistemology) is \textit{not} a property of the thing itself.
+		\item What you know about something is \textit{not} a property of the thing itself.
 	\end{itemize}
 \end{frame}
 
@@ -121,7 +125,7 @@
 % --- [ Problem of Causal Interaction ] ----------------------------------------
 
 \begin{frame}{Problem of Causal Interaction}
-	If the mind is purly non-physical, how can it affect the physical world? This is the \alert{problem of causal interaction}.
+	If the mind is purely non-physical, how can it affect the physical world? This is the \alert{problem of causal interaction}.
 
 	How can something without physical properties have physical effect?
 \end{frame}
@@ -133,15 +137,15 @@
 % --- [ Definition of Mind? ] --------------------------------------------------
 
 \begin{frame}{Definition of Mind?}
-	It seems there is no consitent and generally agreed upon definition of the \alert{mind}.
+	It seems there is no consistent and generally agreed upon definition of the \alert{mind}.
 
 	\pause
 	\vspace{2em}
 
 	\begin{itemize}
-		\item Some definitions of the mind include every aspect of cognitive capability.
+		\item Some definitions of the mind include \textit{every aspect} of cognitive capability.
 		\pause
-		\item Others only include the percept or \alert{qualia} of our conscious experience.
+		\item Others \textit{only} include the percept or \alert{qualia} of our conscious experience.
 	\end{itemize}
 
 	\pause
