consciousness: add Information Integration Theory

--- a/consciousness/consciousness.tex
+++ b/consciousness/consciousness.tex
@@ -30,8 +30,8 @@
 \pagenumbering{arabic}
 
 \include{sections/1_introduction}
-%\include{sections/2_foo}
-%\include{sections/3_foo}
+\include{sections/2_methods}
+\include{sections/3_paradigms}
 %\include{sections/4_foo}
 %\include{sections/5_foo}
 %\include{sections/6_foo}
