consciousness: add dump of preliminary work (not much to see)

--- a/consciousness/consciousness.tex
+++ b/consciousness/consciousness.tex
@@ -2,7 +2,9 @@
 
 \usepackage{preamble}
 
-\title{Consciousness}
+% We predict our conscious reality into existence
+
+\title{Consciousness \\ \Large Exploring the Ghost in the Shell}
 \author{Robin Eklind}
 
 \begin{document}
