--- a/consciousness/references.bib
+++ b/consciousness/references.bib
@@ -73,3 +73,27 @@
 	publisher={Frontiers Media SA},
 	note={[Online] Available: \url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5986937/}. [Accessed: 18 Jun 2019]},
 }
+
+@article{free_energy_principle,
+	title={The free-energy principle: a rough guide to the brain?},
+	author={Friston, Karl},
+	journal={Trends in cognitive sciences},
+	volume={13},
+	number={7},
+	pages={293--301},
+	year={2009},
+	publisher={Elsevier},
+	note={[Online] Available: \url{https://www.fil.ion.ucl.ac.uk/~karl/The%20free-energy%20principle%20-%20a%20rough%20guide%20to%20the%20brain.pdf}. [Accessed: 19 Jun 2019]},
+}
+
+@article{predictive_coding,
+	title={Predictive coding},
+	author={Huang, Yanping and Rao, Rajesh PN},
+	journal={Wiley Interdisciplinary Reviews: Cognitive Science},
+	volume={2},
+	number={5},
+	pages={580--593},
+	year={2011},
+	publisher={Wiley Online Library},
+	note={[Online] Available: \url{https://homes.cs.washington.edu/~rao/predcoding2011.pdf}. [Accessed: 19 Jun 2019]},
+}
