--- a/consciousness/sections/2_methods.tex
+++ b/consciousness/sections/2_methods.tex
@@ -1,5 +1,7 @@
 \section{Methods}
 
+% left or right hemifield of vision.
+
 \todo{foo}
 
 \subsection{Binocular Rivalry}
@@ -12,14 +14,41 @@
 
 \subsection{Continuous Flash Suppression}
 
+% Change Blindness
+
 \todo{foo}
 
-% Change Blindness
+\subsection{Complementary Colour After-images}
+
+% ref: Daniel Dennett -'A Phenomenal Confusion About Access and Consciousness'-AaCedh4Dfs4
+
+\todo{foo}
+
+% Add P-consciousness by synthesis:
+% "Make sure the vision system was susceptible to complementary colour after-images."
+
+% "There is a representational state caused in the way its counterpart in us, and it is the source/cause of the conviction or judgement that there's a red stripe."
+
+% Humes 'strange inversion'
+% We mis-interpret an inner reaction as an outer cuase. We project it into the (manifest) world.
+
+% "Uphill analysis, downhill synthesis."
+%
+%    Uphill analysis (reverse engineer it into its parts), downhil synthesis (synthesis out of parts; forward engineering by adding parts).
+
+% J. J. C. Bmari
+\begin{quote}
+	\textit{``What is going in me is like what goes on in me when I see a red stripe.''}
+\end{quote}
 
 \subsection{Lesion to Corpus Collosum}
 
 \todo{foo}
 
 \subsection{fMRI for NCC}
+
+\todo{foo}
+
+\subsection{Sensory Discrimination}
 
 \todo{foo}
