--- a/consciousness/sections/3_paradigms.tex
+++ b/consciousness/sections/3_paradigms.tex
@@ -14,6 +14,22 @@ The moral implications of IIT if fully considered are substantial, both with reg
 	\textit{``The Internet as a whole potentially has some conscious state. I don't think you can rule it out today categorically.''}
 \end{quote}
 
+\subsection{Bayesian Predictive Coding}
+
+% We should have anticipations about everything that matters to us.
+
+%From as early as the 19th century, it has been hypothesized
+
+\begin{figure}[htbp]
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{inc/abc.png}
+		\caption{Read from left-to-right primes for \textit{``B''} while reading top-to-bottom primes for \textit{``13''}.}
+		\label{fig:abc}
+	\end{center}
+\end{figure}
+
+\todo{foo} \cite{predictive_coding}
+
 \subsection{Emergent Phenomena}
 
 \todo{foo}
